# georgia-court-reminders-2022

./: ARCHITECTURE.md  README.md  pyproject.toml
court-specific/atlanta-municipal/: user_stories.md
court-specific/atlanta-municipal/atlanta_court_scraper/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
court-specific/atlanta-municipal/atlanta_court_scraper/case_data/: .gitkeep
court-specific/atlanta-municipal/atlanta_court_scraper/examples/: example_get_case_data_from_list.py
court-specific/atlanta-municipal/atlanta_court_scraper/src/atlanta_court/: __init__.py  client.py
court-specific/atlanta-municipal/atlanta_court_scraper/tests/: test_cli.py  test_client.py
scraper/atlanta_court_scraper/: .env.example  .gitignore  pyproject.toml
scraper/atlanta_court_scraper/src/atlanta_court/: __init__.py  cli.py  client.py
scraper/atlanta_court_scraper/tests/: __init__.py  conftest.py  test_cli.py  test_client.py
