[project]
name = "georgia-courtbot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "cachetools>=6.2.1",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "flask>=3.1.2",
    "google-api-core>=2.28.1",
    "google-auth>=2.42.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-core>=2.5.0",
    "google-crc32c>=1.7.1",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.71.0",
    "grpcio>=1.76.0",
    "grpcio-status>=1.76.0",
    "gunicorn>=23.0.0",
    "idna>=3.11",
    "jsonschema>=4.25.1",
    "packaging>=25.0",
    "proto-plus>=1.26.1",
    "protobuf>=6.33.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyparsing>=3.2.5",
    "pyrsistent>=0.20.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "soupsieve>=2.8",
    "urllib3>=2.5.0",
]
